--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -13,6 +17,7 @@
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
   },
+  "proxy": "https://cdn.cyberelite.work/api/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
